# Authentication

./: .coverage  .gitignore  Dockerfile  README.md  __main__.py  auth.py  bootstrap.py  build.sh  delete_tests.sh  docker_manager.py  entrypoint.sh  pyproject.toml  requirements.txt  run.py  start.py  start_tests.sh  stop.py
.github/workflows/: pylint.yml
config/: auth.conf
service/: DBManager.py  __init__.py  auth.py  authentication.py  command_handlers.py  db_manager.py  prueba.py  service.py  user.py
storage/: users.db
test/: test_api.py  test_db.py  test_service.py
users/: users.db  users.json
